--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kata-bingo",
+  "name": "kata-bingo-backend",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "5.0.0",
+    "@types/cors": "2.8.12",
     "@types/express": "4.17.13",
     "@types/jest": "27.0.2",
     "@types/module-alias": "2.0.1",
